# geektime-rust

./: .gitignore  Cargo.toml  README.md
03_grammar/scrape_url_args/src/: main.rs
04_httpie/: Cargo.toml
04_httpie/src/: main.rs
05_thumbor/: Cargo.toml  abi.proto  build.rs
05_thumbor/src/: main.rs
05_thumbor/src/engine/: mod.rs  photon.rs
05_thumbor/src/pb/: mod.rs
06_queryer/: Cargo.toml
06_queryer/queryer/: Cargo.toml
06_queryer/queryer-node/: Cargo.toml  README.md  package-lock.json  package.json
06_queryer/queryer-node/src/: lib.rs
06_queryer/queryer-py/: Cargo.toml
06_queryer/queryer-py/src/: lib.rs
06_queryer/queryer/examples/: covid.rs  dialect.rs
06_queryer/queryer/src/: converter.rs  dialect.rs  fetcher.rs  lib.rs  loader.rs
07_ownership/: Cargo.toml
07_ownership/src/: check_copy.rs  ownership_error.rs
08_borrow/: Cargo.toml
08_borrow/src/: heap_reference_stack_outlive.rs  local_ref.rs  main.rs  vec_grow.rs
09_multi_owner/: Cargo.toml
09_multi_owner/src/: dag.rs  dag_mut.rs  main.rs  refcell.rs
10_lifetime/: Cargo.toml
10_lifetime/src/: main.rs  strtok.rs
11_memory/examples/: alignment.rs  raii.rs  size.rs
12_type_system/src/: constant.rs  id.rs  main.rs  writer.rs
13_traits/: Cargo.toml
13_traits/src/: animal.rs  complex.rs  iterator.rs  main.rs  parse.rs  parse1.rs  parse2.rs  write.rs
14_sys_traits/: Cargo.toml
14_sys_traits/src/: convert.rs  copy_drop.rs  default.rs  dev.rs  main.rs  send_sync.rs
15_smart_pointers/: Cargo.toml
15_smart_pointers/src/: allocator.rs  cow1.rs
16_data_structure/: Cargo.toml
16_data_structure/src/: iter.rs  slice2.rs  slice3.rs
17_hash_table/: Cargo.toml
17_hash_table/src/: hashmap1.rs  main.rs
19_closure/examples/: closure_size.rs  closure_size1.rs  thread.rs
19_closure/src/: main.rs
21_kv/: Cargo.toml  abi.proto
21_kv/examples/: client.rs  dummy_server.rs  server.rs  server_with_sled.rs
21_kv/src/: error.rs
21_kv/src/pb/: mod.rs
21_kv/src/service/: command_service.rs  mod.rs
21_kv/src/storage/: memory.rs  mod.rs  sleddb.rs
23_advanced_generics/src/: custom.rs  main.rs
24_advanced_trait_objects/: Cargo.toml
24_advanced_trait_objects/src/: service.rs  trait_object_in_fn.rs
30_unsafe/: Cargo.toml
30_unsafe/examples/: rw_static.rs
30_unsafe/src/: main.rs
31_ffi/bzlib-sys/: Cargo.toml  build.rs
31_ffi/bzlib-sys/src/: bindings.rs  lib.rs
31_ffi/ffi/: Cargo.toml  bindings.h
31_ffi/ffi/src/: lib.rs
31_ffi/ffi_math/: Cargo.toml
31_ffi/ffi_math/src/: math.udl
mid_term_rgrep/: Cargo.toml
mid_term_rgrep/src/: lib.rs  main.rs
