[package]
name = "ownership"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "check_copy"
path = "src/check_copy.rs"

[[bin]]
name = "ownership_error"
path = "src/ownership_error.rs"

[dependencies]
