[package]
name = "rgrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.0.32", features = ["derive"] }
regex = "1"
glob = "0.3"
rayon = "1"
thiserror = "1"
colored = "2"
itertools = "0.10"
