[package]
name = "ffi_math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
uniffi = "0.23"
uniffi_macros = "0.23"

[build-dependencies]
uniffi_build = { version = "0.23", features = ["builtin-bindgen"] }
